# opencv-testing

./: CMakeLists.txt  README.md  webcam.cpp
src/: cv_ver.cpp  facefinder.cpp  grid_finder.cpp  pulse_extractor.cpp  webcam.cpp
